objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>One_Off_Price__c</fullName>
        <label>One Off Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Price__c</fullName>
        <label>Recurring Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_One_Off_Price__c</fullName>
        <formula>One_Off_Price__c *  Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total One Off Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Recurring_Price__c</fullName>
        <formula>Recurring_Price__c *  Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Recurring Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cscfga__Attribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attribute</label>
        <referenceTo>cscfga__Attribute__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>